# lexfr-embed

./: .env.example  .gitignore  Makefile  PROJECT_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: .gitkeep
docs/: build_soutenance_html.py  data-and-evaluation.md  eval-set-spec.md  lexfr-soutenance.html  lexfr-soutenance.md  local-gpu-runbook.md  optimization-backlog.md  publication-venues.md  training-data-strategy.md
results/: .gitkeep
scripts/: build_distill_cache.py  build_trackb_v2.py  campaign_queue.json  day_run.sh  eval_batch.sh  eval_extra.py  eval_general.py  evening_run.sh  gpu_microbench.py  gpu_power.sh  gpu_telemetry.py  microbench_150w.sh  overnight.sh  phase0_kaggle.py  run_campaign.py  run_distill.py  run_phase1.py  runpod_job.sh  trackb_forensics.py  trackb_v2_corpus.py  verify_gpu.py
src/lexfr_embed/: __init__.py  config.py  distill.py  evaluate.py  general_eval.py  metrics.py  quantize.py  scorecard.py  serve.py  train.py
src/lexfr_embed/data/: __init__.py  hard_negatives.py  leakage.py  legalkit.py  rehearsal.py  synthetic_queries.py  trackb.py  trackb_v2.py
tests/: conftest.py  test_data.py  test_distill.py  test_general_eval.py  test_hard_negatives.py  test_leakage.py  test_metrics.py  test_rehearsal.py  test_scorecard.py  test_smoke.py  test_trackb.py  test_trackb_v2.py  test_train.py
