[project]
name = "lexfr-embed"
version = "0.0.1"
description = "LexFR-Embed — a French legal-domain text embedding model (fine-tuned for legal retrieval)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Ghislain Delabie", email = "ghislain@delabie.tech" }]
dependencies = [
    "sentence-transformers>=5.5",
    "datasets>=3.0",
    "transformers>=4.44",
    "accelerate>=0.34",
    "peft>=0.13",
    "faiss-cpu>=1.8",
    "pydantic-settings>=2.4",
    "rich>=13.7",
]

[project.optional-dependencies]
gpu = ["bitsandbytes>=0.43"]            # QLoRA on GPU environments only
track = ["wandb>=0.18"]                  # experiment tracking (report_to="wandb")
serve = ["fastapi>=0.115", "uvicorn>=0.30"]
eval = ["ir-measures>=0.3"]              # optional richer IR metrics; ST evaluator covers the core
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexfr_embed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "smoke: end-to-end smoke test; needs network + torch (deselect with -m 'not smoke')",
]
